# debugging-challenge-suite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
challenges/01_rate_limiter/: README.md  broken.py  fixed.py
challenges/01_rate_limiter/tests/: test_rate_limiter.py
challenges/02_json_normalizer/: README.md  broken.py  fixed.py
challenges/02_json_normalizer/tests/: test_json_normalizer.py
challenges/03_path_sanitizer/: README.md  broken.py  fixed.py
challenges/03_path_sanitizer/tests/: test_path_sanitizer.py
scripts/: run_challenge.py
