[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "debugging-challenge-suite"
version = "0.1.0"
description = "Small debugging challenges with broken code, reference fixes, and tests."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Saina Kakkar" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["challenges"]

